# databricks-genie-integration

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  pyproject.toml
docs/: swagger-oauth-setup.md
examples/: GenieConversationAPI.py  query_example.py
src/: __init__.py
src/api/: __init__.py  genie_client.py
src/auth/: __init__.py  dependencies.py  msal_auth.py
src/models/: __init__.py  config.py  genie.py
src/routers/: genie.py  schema.py
src/services/: genie_client.py
src/swagger/: __init__.py
src/swagger/routing/: __init__.py  openapi.py  swagger_ui.py
